<resources>
    <string name="app_name">SensorTest</string>
    <string name="hello_world">Hello World!</string>
    <string name="title_activity_train">TrainActivity</string>
    <string name="title_activity_train_log">TrainLogActivity</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="title_activity_train_raw_log">TrainRawLogActivity</string>
    <string name="title_activity_knock">KnockActivity</string>
    <string name="title_activity_knock_learn">KnockLearnActivity</string>
    <string name="title_activity_view_raw">ViewRawActivity</string>
    <string name="title_activity_mic">MicActivity</string>
    <string name="title_activity_mode">ModeActivity</string>
    <string name="title_activity_ambidex">ModeActivity</string>
    <string name="title_activity_fake_volume">FakeVolumeActivity</string>
    <string name="idle">IDLE</string>
    <string name="sound_flag">SOUND</string>
    <string name="tilt_flag">TILT</string>
    <string name="dual_flag">TOUCH</string>
    <string name="lefty">LEFTY</string>
    <string name="righty">Righty</string>
    <string name="up">UP</string>
    <string name="down">DOWN</string>
    <string name="motion_mode">Motion mode</string>
    <string name="rotate_mode">Rotation mode</string>
    <string name="conventional">Fake Volume</string>
    <string name="test_runmode">TEST</string>
    <string name="trial_runmode">TRIAL</string>
    <string name="bodyknock">BodyKnock</string>
    <string name="wristbutton">WristButton</string>
    <string name="raw_data">View Raw Updates</string>
</resources>
