<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.sensor.magic.sensortest.SensorActivity"
    tools:deviceIds="wear"
    >

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <Button
        android:id="@+id/knock_game"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bodyknock"
        android:onClick="startBodyKnock"
        android:layout_weight="1"/>
    <Button
        android:id="@+id/audio_test"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/wristbutton"
        android:onClick="startWristButton"
        android:layout_weight="1"/>
    <Button
        android:id="@+id/data_test"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/raw_data"
        android:onClick="viewAllUpdates"
        android:layout_weight="1"/>
</LinearLayout>


</ScrollView>