<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container_mode"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.sensor.magic.sensortest.ModeActivity"
    tools:deviceIds="wear"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/raise"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/motion_mode"
            android:onClick="checkMotion"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/rotate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rotate_mode"
            android:onClick="checkRotate"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/fake_volume"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/conventional"
            android:onClick="checkConventional"
            android:layout_weight="1"/>
    </LinearLayout>
</ScrollView>